Fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
-html{
-    background-color: #f2f1ed;
-    font-family: Georgia, serif;
-    line-height: 1.5;
-  }
+html {
+  background-color: #f2f1ed;
+  font-family: Georgia, serif;
+  line-height: 1.5;
+}
 
-img{
+img {
   width: 100%;
 }
 
-h1, h2 {
+h1, h2, h3, h4 {
   color: #5d8432;
   text-transform: uppercase;
 }
@@ -29,7 +29,7 @@ nav ol {
 }
 
 nav a {
-  color: #793284
+  color: #793284;
 }
 
 nav a:hover {
